# CloudComputer2025

./: .env.example  .gitignore  PLAN.md  README.md  TECHNICAL_DOCUMENT.md  TODO.md  Technical.md  docker-compose.new.yml  docker-compose.yml
backend/: .gitignore  Dockerfile  TODO.md  pyproject.toml
backend/api-gateway/: TODO.md
backend/central_agent/: main.py
backend/chat-service/: TODO.md
backend/common/: models.py
backend/graph-service/: TODO.md
backend/knowledge_engine/: service.py
backend/knowledge_engine/core/: graph_processor.py  neo4j_client.py  rag_engine.py  storage.py
backend/search-service/: TODO.md
backend/search_agent/: __init__.py  graph.py  service.py
backend/shared/: TODO.md
data/graphs/: 深度学习.json  神经网络.json
data/lightrag_workdir/深度学习/: graph_chunk_entity_relation.graphml  kv_store_doc_status.json  kv_store_entity_chunks.json  kv_store_full_docs.json  kv_store_full_entities.json  kv_store_full_relations.json  kv_store_relation_chunks.json  kv_store_text_chunks.json  (+1 more)
deploy/: TODO.md
docs/: API.md  TODO.md
frontend/: README_DEV.md  TODO.md  nginx.conf  vite.config.js
scripts/: TODO.md
services/knowledge-engine/: .dockerignore  .gitignore  Dockerfile  TODO.md  annotations.md  main.py  models.py  pyproject.toml
services/knowledge-engine/core/: graph_processor.py  rag_engine.py  storage.py
services/search-agent/: Dockerfile  TODO.md  agent.py  annotation.md  main.py  models.py  prompts.py  requirements.txt
services/web-frontend/: Dockerfile  TODO.md  index.html  nginx.conf  package.json  vite.config.js
tests/: TODO.md
(+41 files in other folders)
