[project]
name = "knowledge-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "lightrag-hku>=1.4.9.11",
    "neo4j>=6.1.0",
    "networkx>=3.6.1",
    "numpy>=2.4.1",
    "openai>=2.15.0",
    "python-dotenv>=1.2.1",
    "pyvis>=0.3.2",
    "sentence-transformers>=5.2.0",
    "uvicorn>=0.40.0",
] 